tests/specs/namespace_details.txt
# mod.ts
export namespace Namespace {
  /**
   * Doc comment 1
   *
   * Details 1
   */
  export function a() {}
  /**
   * Doc comment 2
   *
   * Details 2
   */
  export class B {}
}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export namespace Namespace {
  | ^

# output.txt
Defined in file:///mod.ts:0:1

namespace Namespace

  function a(): void
    Doc comment 1

    Details 1
  class B
    Doc comment 2

    Details 2


# output.json
{
  "imports": [],
  "symbols": [
    {
      "name": "Namespace",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 0,
            "col": 0,
            "byteIndex": 0
          },
          "declarationKind": "export",
          "kind": "namespace",
          "def": {
            "elements": [
              {
                "name": "a",
                "declarations": [
                  {
                    "location": {
                      "filename": "file:///mod.ts",
                      "line": 6,
                      "col": 2,
                      "byteIndex": 82
                    },
                    "declarationKind": "export",
                    "jsDoc": {
                      "doc": "Doc comment 1\n\nDetails 1"
                    },
                    "kind": "function",
                    "def": {
                      "params": [],
                      "returnType": {
                        "repr": "void",
                        "kind": "keyword",
                        "value": "void"
                      },
                      "hasBody": true,
                      "isAsync": false,
                      "isGenerator": false,
                      "typeParams": []
                    }
                  }
                ]
              },
              {
                "name": "B",
                "declarations": [
                  {
                    "location": {
                      "filename": "file:///mod.ts",
                      "line": 12,
                      "col": 2,
                      "byteIndex": 158
                    },
                    "declarationKind": "export",
                    "jsDoc": {
                      "doc": "Doc comment 2\n\nDetails 2"
                    },
                    "kind": "class",
                    "def": {
                      "isAbstract": false,
                      "constructors": [],
                      "properties": [],
                      "indexSignatures": [],
                      "methods": [],
                      "extends": null,
                      "implements": [],
                      "typeParams": [],
                      "superTypeParams": []
                    }
                  }
                ]
              }
            ]
          }
        }
      ]
    }
  ]
}
